# dp

./: .gitignore  LICENSE  pom.xml  readme.md
dbprov-master/: Dockerfile.ProvStorage  Dockerfile.TrustedParty  README.md  compose.yaml  docker-update-hosts  pg_service.conf  pyproject.toml
dbprov-master/dbprov_prov_storage/: docker-entrypoint.sh  manage.py
dbprov-master/dbprov_prov_storage/config/: config-hospital.json  config-pathology.json  config-research.json
dbprov-master/dbprov_prov_storage/distributed_prov_system/: asgi.py  config.py  settings.py  urls.py  wsgi.py
dbprov-master/dbprov_prov_storage/provenance/: CPM_helpers.py  CPM_validation_strategies.py  apps.py  constants.py  controller.py  is_backbone_entity_strategies.py  models.py  neomodel2prov.py  prov2neomodel.py  prov_doc_validators_strategies.py  urls.py  validators.py  views.py
dbprov-master/dbprov_prov_storage/resources/: config.json
dbprov-master/dbprov_trusted_party/: docker-entrypoint.sh  manage.py
dbprov-master/dbprov_trusted_party/config/: config.json
dbprov-master/dbprov_trusted_party/config/certificates/: tp.key  tp.pem
dbprov-master/dbprov_trusted_party/non_repudiation/: apps.py  controller.py  models.py  urls.py  views.py
dbprov-master/dbprov_trusted_party/non_repudiation/migrations/: 0001_initial.py  0002_document_doc_format.py
dbprov-master/dbprov_trusted_party/resources/: config.json
dbprov-master/dbprov_trusted_party/trusted_party/: asgi.py  config.py  settings.py  urls.py  wsgi.py
dbprov-master/resources/certificates/: int1.pem  int2.pem
docs/: obsah.md
(+42 files in other folders)
